[gd_scene load_steps=9 format=2]

[ext_resource path="res://MenuSeleccion.gd" type="Script" id=1]
[ext_resource path="res://headsoccer/headsoccer/UI and Objects/Button/Normal/Button Normal-05.png" type="Texture" id=2]
[ext_resource path="res://headsoccer/headsoccer/UI and Objects/Button/Normal/Button Normal-06.png" type="Texture" id=3]
[ext_resource path="res://headsoccer/headsoccer/UI and Objects/Button/Disable/Button Disable-05.png" type="Texture" id=4]
[ext_resource path="res://headsoccer/headsoccer/UI and Objects/Button/Disable/Button Disable-06.png" type="Texture" id=5]
[ext_resource path="res://headsoccer/headsoccer/Fondo-gris-transparente-2.png" type="Texture" id=6]

[sub_resource type="Theme" id=3]

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 600, 600 )

[node name="MenuSeleccion" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -640.0
margin_top = -360.0
margin_right = 640.0
margin_bottom = 360.0
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="PanelPlayer1" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 104.0
margin_top = 152.0
margin_right = -746.0
margin_bottom = -142.0
theme = SubResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="PanelPlayer1"]
margin_left = 109.0
margin_top = 8.0
margin_right = 313.0
margin_bottom = 41.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_styles/normal = SubResource( 2 )
text = "Select your Character"
align = 1
valign = 1
uppercase = true

[node name="BotonSiguiente" type="TextureButton" parent="PanelPlayer1"]
anchor_left = 0.5
anchor_top = 0.496
anchor_right = 0.5
anchor_bottom = 0.496
margin_left = 122.0
margin_top = -42.296
margin_right = 207.0
margin_bottom = 42.704
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 4 )

[node name="VistaPersonajePlayer1" type="Node2D" parent="PanelPlayer1"]
position = Vector2( 216, 211 )

[node name="BotonAnterior" type="TextureButton" parent="PanelPlayer1"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -205.0
margin_top = -42.0
margin_right = -120.0
margin_bottom = 43.0
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 5 )

[node name="BotonConfirmar" type="Button" parent="PanelPlayer1"]
margin_left = 132.0
margin_top = 381.0
margin_right = 306.0
margin_bottom = 401.0
text = "Confirmar"

[node name="PanelPlayer2" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 752.0
margin_top = 152.0
margin_right = -98.0
margin_bottom = -142.0
theme = SubResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="PanelPlayer2"]
margin_left = 109.0
margin_top = 8.0
margin_right = 313.0
margin_bottom = 41.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_styles/normal = SubResource( 2 )
text = "Select your Character"
align = 1
valign = 1
uppercase = true

[node name="BotonAnterior2" type="TextureButton" parent="PanelPlayer2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -205.0
margin_top = -42.0
margin_right = -120.0
margin_bottom = 43.0
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 5 )

[node name="VistaPersonajePlayer2" type="Node2D" parent="PanelPlayer2"]
position = Vector2( 216, 211 )

[node name="BotonSiguiente2" type="TextureButton" parent="PanelPlayer2"]
anchor_left = 0.5
anchor_top = 0.496
anchor_right = 0.5
anchor_bottom = 0.496
margin_left = 122.0
margin_top = -42.296
margin_right = 207.0
margin_bottom = 42.704
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 4 )

[node name="BotonConfirmar2" type="Button" parent="PanelPlayer2"]
margin_left = 132.0
margin_top = 381.0
margin_right = 306.0
margin_bottom = 401.0
text = "Confirmar"
